--- a/index.html
+++ b/index.html
@@ -1,113 +1,61 @@
-<!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>第三次段考最低分計算</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #f0f4f8;
-            margin: 0;
-        }
-        form {
-            background: #ffffff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            width: 100%;
-        }
-        h1 {
-            font-size: 24px;
-            color: #333;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        label {
-            font-size: 14px;
-            color: #555;
-            display: block;
-            margin-top: 10px;
-        }
-        input[type="number"] {
-            width: 100%;
-            padding: 10px;
-            margin: 5px 0 15px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 16px;
-            box-sizing: border-box;
-        }
-        button {
-            width: 100%;
-            padding: 12px;
-            background-color: #28a745;
-            color: #ffffff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        button:hover {
-            background-color: #218838;
-        }
-        .result, .prediction {
-            margin-top: 20px;
-            font-size: 16px;
-            color: #333;
-            text-align: center;
-        }
-        .result {
-            font-weight: bold;
-        }
-        .prediction {
-            margin-top: 10px;
-            font-style: italic;
-        }
-    </style>
+    <title>學習成績分析工具</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-    <form id="gradeForm">
-        <h1>第三次段考最低分計算</h1>
-        <label for="exam1">第一次段考成績 (20%):</label>
-        <input type="number" id="exam1" name="exam1" required>
-        <label for="exam2">第二次段考成績 (20%):</label>
-        <input type="number" id="exam2" name="exam2" required>
-        <label for="exam3">第三次段考成績 (20%):</label>
-        <input type="number" id="exam3" name="exam3" required>
-        <label for="daily">平時成績 (40%):</label>
-        <input type="number" id="daily" name="daily" required>
-        <button type="submit">計算總成績</button>
-    </form>
-    <div class="result" id="result"></div>
-    <div class="prediction" id="prediction"></div>
+    <div class="container">
+        <form id="gradeForm">
+            <h1>學習成績分析器</h1>
+            <div class="input-group">
+                <label for="exam1">第一次段考成績 (20%):</label>
+                <div class="input-wrapper">
+                    <input type="number" id="exam1" name="exam1" required min="0" max="100" placeholder="輸入分數">
+                    <span class="input-icon"><i class="bi bi-bar-chart-fill"></i></span>
+                </div>
+            </div>
+            <div class="input-group">
+                <label for="exam2">第二次段考成績 (20%):</label>
+                <div class="input-wrapper">
+                    <input type="number" id="exam2" name="exam2" required min="0" max="100" placeholder="輸入分數">
+                    <span class="input-icon"><i class="bi bi-graph-up"></i></span>
+                </div>
+            </div>
+            <div class="input-group">
+                <label for="exam3">第三次段考成績 (20%):</label>
+                <div class="input-wrapper">
+                    <input type="number" id="exam3" name="exam3" required min="0" max="100" placeholder="輸入分數">
+                    <span class="input-icon"><i class="bi bi-pencil-fill"></i></span>
+                </div>
+            </div>
+            <div class="input-group">
+                <label for="daily">平時成績 (40%):</label>
+                <div class="input-wrapper">
+                    <input type="number" id="daily" name="daily" required min="0" max="100" placeholder="輸入分數">
+                    <span class="input-icon"><i class="bi bi-clipboard-data"></i></span>
+                </div>
+            </div>
+            <button type="submit" class="submit-btn">分析成績</button>
+        </form>
+        
+        <div class="results-container">
+            <div class="result-card">
+                <h3>成績總覽</h3>
+                <div class="result" id="result"></div>
+                <div class="prediction" id="prediction"></div>
+                <div class="grade-details" id="gradeDetails"></div>
+            </div>
+            
+            <div class="chart-container">
+                <canvas id="gradeChart"></canvas>
+            </div>
+        </div>
+    </div>
 
-    <script>
-        document.getElementById('gradeForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const exam1 = parseFloat(document.getElementById('exam1').value);
-            const exam2 = parseFloat(document.getElementById('exam2').value);
-            const exam3 = parseFloat(document.getElementById('exam3').value);
-            const daily = parseFloat(document.getElementById('daily').value);
-            const total = (exam1 * 0.2) + (exam2 * 0.2) + (exam3 * 0.2) + (daily * 0.4);
-            document.getElementById('result').innerText = '總成績: ' + total.toFixed(1);
-
-            // 計算需要的第三次段考成績
-            const requiredScoreForExam3 = (60 - (exam1 * 0.2 + exam2 * 0.2 + daily * 0.4 +exam3 * 0.2)) / 0.2;
-            if (requiredScoreForExam3 > 100) {
-                document.getElementById('prediction').innerText = '第三次段考需要成績: 超過100，無法達到總分60。';
-            } else if (requiredScoreForExam3 < 0) {
-                document.getElementById('prediction').innerText = '第三次段考需要成績: 已經超過60分。';
-            } else {
-                document.getElementById('prediction').innerText = '第三次段考需要成績: 至少 ' + requiredScoreForExam3.toFixed(0) + ' 分才能超過總分60。';
-            }
-        });
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
