--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>學習成績分析工具</title>
+    <title>期末考成績推算</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <form id="gradeForm">
-            <h1>學習成績分析器</h1>
+            <h1>期末考成績推算</h1>
             <div class="input-group">
                 <div class="input-wrapper">
                     <label for="exam1">第一次段考成績 (20%):</label>
